--- a/consignment.html
+++ b/consignment.html
@@ -235,13 +235,13 @@
                 </select>
             </div>
             <div class="ui secondary menu">
-                <a class="item active" data-tab="Party_about">О партії</a>
+                <a class="item" data-tab="Party_about">О партії</a>
                 <a class="item " data-tab="Party_program">Программа партії</a>
                 <a class="item" data-tab="Party_initiative">Іниціатива партії</a>
                 <a class="item" data-tab="Party_multimedia">Мультимедіа</a>
-                <a class="item" data-tab="Party_rest">Мерч/Лого/Брендбук</a>
+                <a class="item active" data-tab="Party_rest">Мерч/Лого/Брендбук</a>
             </div>
-            <div class="ui active tab" data-tab="Party_about">
+            <div class="ui tab" data-tab="Party_about">
                 <div class="news_page_l_content">
                     <h2>Кожен може керувати</h2>
                     <br>
@@ -852,8 +852,245 @@
                     </div>
                 </section>
             </div>
-            <div class="ui tab" data-tab="Party_rest">
-                5
+            <div class="ui active  tab" data-tab="Party_rest">
+                <section class="party_rest">
+                    <div class="party_rest_content">
+                        <div class="party_rest_content_l">
+                            <h2 class="party_rest_content_l_text">
+                                Якись невеличкий заголовок
+                            </h2>
+                            <p>
+                                До речі, подорожувати Україною поїздом ви можете за водійським посвідченням, ID-карткою
+                                або закордонним паспортом у Дії.
+                            </p>
+                            <p>
+                                Заклади громадського харчування зможуть приймати відвідувачів у приміщенні, але одна
+                                умова — обов'язкове дотримання усіх протиепідемічних заходів. Також українцям, старшим
+                                60 років, з п'ятниці буде дозволено не дотримуватися самоізоляції. Урядовці дозволили
+                                проведення релігійних заходів та акредитацію освітніх програм ВНЗ, за якими готують
+                                студентів. </p>
+                            <p>
+                                До речі, подорожувати Україною поїздом ви можете за водійським посвідченням, ID-карткою
+                                або закордонним паспортом у Дії.
+                            </p>
+                        </div>
+                        <div class="party_rest_content_r">
+                            <img src="./img/image%2024.png" alt="">
+                        </div>
+                    </div>
+                    <div class="party_rest_one party_items">
+                        <div class="party_rest_top">
+                            <div class="party_rest_number">1</div>
+                            <div class="party_rest_top_text">Будь з нами в соціальніх мережах</div>
+                        </div>
+                        <div class="hashtag">
+                            <div class="hashtag_l">
+                                <div class="hashtag_l_text">Головний хештег</div>
+                                <a href="#" target="_blank" class="hashtag_text_b">#НазваХештегу</a>
+                            </div>
+                            <div class="hashtag_r">
+                                <div class="hashtag_l_text">Головний хештег</div>
+                                <div class="hashtag_text_all">
+                                    <a href="#" target="_blank" class="hashtag_text_s">#НазваХештегу</a>
+                                    <a href="#" target="_blank" class="hashtag_text_s">#Назва</a>
+                                    <a href="#" target="_blank" class="hashtag_text_s">#НазваВеликогоХештегу</a>
+                                    <a href="#" target="_blank" class="hashtag_text_s">#НазваХештегу</a>
+                                    <a href="#" target="_blank" class="hashtag_text_s">#Назва </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="facebook_cover">
+                            <div class="facebook_cover_l">
+                                <div class="facebook_cover_top">Став нашу обкладинку на facebook</div>
+                                <a href="#" class="button_rest">Завантажити обкладинку</a>
+                                <div class="img_cover">
+                                    <img src="./img/cover.png" alt="">
+                                </div>
+                            </div>
+                            <div class="facebook_cover_r ">
+                                <div class="facebook_cover_top">Став рамку на фото на facebook</div>
+                                <div class="facebook_cover_r_info">
+                                    <p><span>1.</span> Натисни «Оновити фото», потім «Додати рамку» натисни на кнопку
+                                        "Встановити"</p>
+                                    <p>
+                                        <span>2.</span> Введи в пошуку «Назва» або «Назва»</p>
+                                    <p>
+                                        <span>3.</span> Вибирай будь-яку з рамок і додавай до себе на фото</p>
+                                </div>
+                                <div class="button_container_facebook">
+                                    <div class="button_container_facebook_text">або просто натисни на кнопку</div>
+                                    <a href="#" class="button_rest">Встановити</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="party_rest_two party_items">
+                        <div class="party_rest_top">
+                            <div class="party_rest_number">2</div>
+                            <div class="party_rest_top_text">Спробуй безкоштовно наші стікер-паки в telegram</div>
+                        </div>
+                        <div class="sticker_telegrams">
+                            <div class="sticker_telegrams_l">
+                                <div class="sticker_telegrams_img">
+                                    <img src="./img/image%2025.png" alt="">
+                                </div>
+                                <div class="sticker_telegrams_info">
+                                    <div class="sticker_telegrams_info_text">
+                                        “Назва стікер-паку”
+                                    </div>
+                                    <a href="" class="button_rest">Встановити</a>
+                                </div>
+                            </div>
+                            <div class="sticker_telegrams_r">
+                                <div class="sticker_telegrams_img">
+                                    <img src="./img/image%2026.png" alt="">
+                                </div>
+                                <div class="sticker_telegrams_info">
+                                    <div class="sticker_telegrams_info_text">
+                                        “Назва стікер-паку”
+                                    </div>
+                                    <a href="" class="button_rest">Встановити</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="party_rest_three party_items">
+                        <div class="party_rest_top">
+                            <div class="party_rest_number">3</div>
+                            <div class="party_rest_top_text">Роздрукуй нашу атрибутику</div>
+                        </div>
+                        <div class="attribution_print">
+                            <div class="attribution_print_item">
+                                <div class="attribution_print_img">
+                                    <img src="./img/image%2027.png" alt="">
+                                </div>
+                                <div class="attribution_print_text">Постер</div>
+                                <a href="#" class="button_rest">Завантажити макет</a>
+                            </div>
+                            <div class="attribution_print_item">
+                                <div class="attribution_print_img">
+                                    <img src="./img/image%2028.png" alt="">
+                                </div>
+                                <div class="attribution_print_text">Білборд</div>
+                                <a href="#" class="button_rest">Завантажити макет</a>
+                            </div>
+                            <div class="attribution_print_item">
+                                <div class="attribution_print_img">
+                                    <img src="./img/image28.png" alt="">
+                                </div>
+                                <div class="attribution_print_text">Листівка</div>
+                                <a href="#" class="button_rest">Завантажити макет</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="party_rest_four">
+                        <div class="party_rest_top">
+                            <div class="party_rest_number">4</div>
+                            <div class="party_rest_top_text">Використовуй наш стиль</div>
+                        </div>
+                        <div class="style_page_grid">
+                            <div class="style_page_item">
+                                <div class="style_page_text">
+                                    <div class="style_color">Синій</div>
+                                    <div class="style_color_hash">2D8CFF</div>
+                                </div>
+                                <div class="line_color">
+
+                                </div>
+                            </div>
+                            <div class="style_page_item">
+                                <div class="style_page_text">
+                                    <div class="style_color">Синьо-чорний</div>
+                                    <div class="style_color_hash">0B0F30</div>
+                                </div>
+                                <div class="line_color">
+
+                                </div>
+                            </div>
+                            <div class="style_page_item">
+                                <div class="style_page_text">
+                                    <div class="style_color">Жовтий</div>
+                                    <div class="style_color_hash">FED674</div>
+                                </div>
+                                <div class="line_color">
+
+                                </div>
+                            </div>
+                            <div class="style_page_item">
+                                <div class="style_page_text">
+                                    <div class="style_color">Темно-сірий</div>
+                                    <div class="style_color_hash">464849</div>
+                                </div>
+                                <div class="line_color">
+
+                                </div>
+                            </div>
+                            <div class="style_page_item">
+                                <div class="style_page_text">
+                                    <div class="style_color">Світло-сірий</div>
+                                    <div class="style_color_hash">ECECF2</div>
+                                </div>
+                                <div class="line_color">
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="logo_grid">
+                            <div class="logo_grid_item">
+                                <div class="logo_grid_item_text">Основний логотип</div>
+                                <p>Логотип партії складається з шрифтового накреслення, виконаного геометричним
+                                    гротеском з помірними пропорціями знаків, гармонійно вписаного в унікальний
+                                    графічний образ.</p>
+                                <div class="logo_grid_image">
+                                    <div class="logo_image">
+                                        <img src="./img/logo_image.png" alt="">
+                                    </div>
+                                    <div class="logo_image">
+                                        <img src="./img/logo_image.png" alt="">
+                                    </div>
+                                    <div class="logo_image">
+                                        <img src="./img/logo_image.png" alt="">
+                                    </div>
+                                </div>
+                                <a href="#" class="button_rest">Завантажити макет</a>
+                            </div>
+                            <div class="logo_grid_item">
+                                <div class="logo_grid_item_text">Додаткові версії</div>
+                                <p>Логотип партії складається з шрифтового накреслення, виконаного геометричним
+                                    гротеском з помірними пропорціями знаків, гармонійно вписаного в унікальний
+                                    графічний образ.</p>
+                                <div class="logo_grid_image">
+                                    <div class="logo_image">
+                                        <img src="./img/logo_image.png" alt="">
+                                    </div>
+                                    <div class="logo_image">
+                                        <img src="./img/logo_image.png" alt="">
+                                    </div>
+                                    <div class="logo_image">
+                                        <img src="./img/logo_image.png" alt="">
+                                    </div>
+                                </div>
+                                <a href="#" class="button_rest">Завантажити макет</a>
+                            </div>
+                        </div>
+                        <div class="party_all">
+                            <div class="party_all_item brand_book">
+                                <div class="logo_grid_item_text">Брендбук</div>
+                                <p>Всі приклади нашого стилю і то, як його використовувати, ти можеш побачити, скачавши
+                                    наш брендбук.</p>
+                                <a href="#" class="button_rest">Завантажити</a>
+                            </div>
+                            <div class="party_all_item">
+                                <div class="logo_grid_item_text">Шрифт - Gilroy</div>
+                                <p>Шрифт є одним з найважливіших елементів, що становлять фірмову айдентику.</p>
+                                <p>
+                                    Для набору комунікаційних матеріалів, корпоративних елементів, заголовків і
+                                    основного масиву тексту використовується гарнітура Gilroy в накресленнях regular,
+                                    medium і bold.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
         </div>
     </div>
