add bread_mob and sctipt fix link mob select

--- a/consignment.html
+++ b/consignment.html
@@ -220,6 +220,12 @@
             Партія
         </li>
     </ul>
+    <ul class="bread_crumbs mob_bread">
+        <li class="bread_link">
+            <img src="./img/arrow.svg" alt="" class="img-svg">
+            <a href="#">Головна</a>
+        </li>
+    </ul>
     <div class="consignment">
         <div class="page_news_top">
             <h1 class="text_big_all">Партія</h1>
@@ -227,11 +233,11 @@
         <div id="party">
             <div class="party_select_mob">
                 <select class="ui dropdown news_dropdown">
-                    <option value="Party_about">О партії</option>
-                    <option value="Party_program">Программа партії</option>
-                    <option value="Party_initiative">Іниціатива партії</option>
-                    <option value="Party_multimedia">Мультимедіа</option>
-                    <option value="Party_rest">Мерч/Лого/Брендбук</option>
+                    <option value="Party_about" data-href="./results.html">О партії</option>
+                    <option value="Party_program" data-href="./results.html">Программа партії</option>
+                    <option value="Party_initiative" data-href="./results.html">Іниціатива партії</option>
+                    <option value="Party_multimedia" data-href="./result.html">Мультимедіа</option>
+                    <option value="Party_rest" data-href="./result.html">Мерч/Лого/Брендбук</option>
                 </select>
             </div>
             <div class="ui secondary menu">
