--- a/contact.html
+++ b/contact.html
@@ -220,6 +220,12 @@
             Контакти
         </li>
     </ul>
+    <ul class="bread_crumbs mob_bread">
+        <li class="bread_link">
+            <img src="./img/arrow.svg" alt="" class="img-svg">
+            <a href="#">Головна</a>
+        </li>
+    </ul>
     <section class="contact">
         <div class="page_news_top voter_top">
             <h1 class="text_big_all">Контакти</h1>
