--- a/finance.html
+++ b/finance.html
@@ -221,6 +221,12 @@
         </li>
 
     </ul>
+    <ul class="bread_crumbs mob_bread">
+        <li class="bread_link">
+            <img src="./img/arrow.svg" alt="" class="img-svg">
+            <a href="#">Головна</a>
+        </li>
+    </ul>
     <section class="finance">
         <div class="page_news_top voter_top">
             <h1 class="text_big_all">Фінансова підтримка</h1>
