--- a/multimedia_image.html
+++ b/multimedia_image.html
@@ -210,7 +210,7 @@
         </div>
     </div>
 </header>
-<a class="container_all container_home container_news_page">
+<div class="container_all container_home container_news_page">
     <ul class="bread_crumbs">
         <li class="bread_link">
             <a href="#">Головна</a>
@@ -224,6 +224,12 @@
         <li class="bread_link">
             <img src="./img/arrow_left.svg" alt="">
             Тут повинен бути якись слоган заголовок новини не більш ниж у три строки
+        </li>
+    </ul>
+    <ul class="bread_crumbs mob_bread">
+        <li class="bread_link">
+            <img src="./img/arrow.svg" alt="" class="img-svg">
+            <a href="#">Питання та відповіді</a>
         </li>
     </ul>
     <section class="multimedia_image">
