--- a/multimedia_video.html
+++ b/multimedia_video.html
@@ -226,6 +226,12 @@
             Тут повинен бути якись слоган заголовок новини не більш ниж у три строки
         </li>
     </ul>
+    <ul class="bread_crumbs mob_bread">
+        <li class="bread_link">
+            <img src="./img/arrow.svg" alt="" class="img-svg">
+            <a href="#">Питання та відповіді</a>
+        </li>
+    </ul>
     <section class="multimedia_video">
         <div class="page_news_top voter_top">
             <h1 class="text_big_all">Тут повинен бути якись слоган заголовок новини не більш ниж у три строки</h1>
