--- a/question_page.html
+++ b/question_page.html
@@ -226,6 +226,12 @@
             Якесь питання про політичну программу партії, яке може розкрити суть, що це таке?
         </li>
     </ul>
+    <ul class="bread_crumbs mob_bread">
+        <li class="bread_link">
+            <img src="./img/arrow.svg" alt="" class="img-svg">
+            <a href="#">Питання та відповіді</a>
+        </li>
+    </ul>
     <section class="voter">
         <div class="page_news_top voter_top">
             <h1 class="text_big_all">Якесь питання про політичну программу партії, яке може розкрити суть, що це
