--- a/consignment_page.html
+++ b/consignment_page.html
@@ -224,6 +224,12 @@
             Що для Вас управління містом у смартфоні?
         </li>
     </ul>
+    <ul class="bread_crumbs mob_bread">
+        <li class="bread_link">
+            <img src="./img/arrow.svg" alt="" class="img-svg">
+            <a href="#">Новини</a>
+        </li>
+    </ul>
     <section class="page_news consignment_page">
         <div class="page_news_top">
             <h1 class="text_big_all">Що для Вас управління містом у смартфоні?</h1>
