--- a/control_vibor.html
+++ b/control_vibor.html
@@ -220,6 +220,12 @@
             Контролюй вибори
         </li>
     </ul>
+    <ul class="bread_crumbs mob_bread">
+        <li class="bread_link">
+            <img src="./img/arrow.svg" alt="" class="img-svg">
+            <a href="#">Головна</a>
+        </li>
+    </ul>
     <section class="page_news">
         <div class="page_news_top voter_top">
             <h1 class="text_big_all">Контролюй вибори</h1>
