--- a/news.html
+++ b/news.html
@@ -220,6 +220,12 @@
             Новини
         </li>
     </ul>
+    <ul class="bread_crumbs mob_bread">
+        <li class="bread_link">
+            <img src="./img/arrow.svg" alt="" class="img-svg">
+            <a href="#">Головна</a>
+        </li>
+    </ul>
     <section class="page_news">
         <div class="page_news_top">
             <h1 class="text_big_all">Новини</h1>
