--- a/news_page.html
+++ b/news_page.html
@@ -224,6 +224,12 @@
             Карантин відступає: повноцінна робота ресторанів та подорожі літаком
         </li>
     </ul>
+    <ul class="bread_crumbs mob_bread">
+        <li class="bread_link">
+            <img src="./img/arrow.svg" alt="" class="img-svg">
+            <a href="#">Новини</a>
+        </li>
+    </ul>
     <section class="page_news">
         <div class="page_news_top">
             <h1 class="text_big_all">Карантин відступає: повноцінна робота ресторанів та подорожі літаком</h1>
