--- a/question.html
+++ b/question.html
@@ -220,6 +220,12 @@
             Питання та відповіді
         </li>
     </ul>
+    <ul class="bread_crumbs mob_bread">
+        <li class="bread_link">
+            <img src="./img/arrow.svg" alt="" class="img-svg">
+            <a href="#">Головна</a>
+        </li>
+    </ul>
     <section class="voter">
         <div class="page_news_top voter_top">
             <h1 class="text_big_all">Питання та відповіді</h1>
