--- a/representation.html
+++ b/representation.html
@@ -220,6 +220,12 @@
             Представництва партії у Харківської області
         </li>
     </ul>
+    <ul class="bread_crumbs mob_bread">
+        <li class="bread_link">
+            <img src="./img/arrow.svg" alt="" class="img-svg">
+            <a href="#">Головна</a>
+        </li>
+    </ul>
     <section class="representation">
         <div class="page_news_top voter_top">
             <h1 class="text_big_all">Представництва партії у Харківської області</h1>
