--- a/voter_page.html
+++ b/voter_page.html
@@ -226,6 +226,12 @@
             Що для Вас управління містом у смартфоні?
         </li>
     </ul>
+    <ul class="bread_crumbs mob_bread">
+        <li class="bread_link">
+            <img src="./img/arrow.svg" alt="" class="img-svg">
+            <a href="#"> Опитування виборців</a>
+        </li>
+    </ul>
     <section class="voter">
         <div class="page_news_top voter_top">
             <h1 class="text_big_all">Що для Вас управління містом у смартфоні? </h1>
