upadte style and initiative and viboru

--- a/viboru.html
+++ b/viboru.html
@@ -221,6 +221,12 @@
                 Вибори 2020
             </li>
         </ul>
+        <ul class="bread_crumbs mob_bread">
+            <li class="bread_link">
+                <img src="./img/arrow.svg" alt="" class="img-svg">
+                <a href="#">Головна</a>
+            </li>
+        </ul>
         <div class="elections">
             <div class="elections_l">
                 <h1>Ми йдемо на місцеві вибори</h1>
